Fixed bugs #3 and #5, etc.
Separated out textSelect jquery plugin from index.js
Fixed uneeded scrollbars from showing up in the timeline

--- a/Timeline/css/index.css
+++ b/Timeline/css/index.css
@@ -44,12 +44,13 @@ button {
 
 #boneList {
 	display: inline-block;
-	margin: 23px 0 0 0;
+	margin: 23px 0 -4px 0;
 	padding: 4px 3px 0 3px;
 	width: 133px;
 	list-style: none;
 	background-color: white;
 	border-right: solid 1px rgba(0,0,0,0.3);
+	overflow-x: hidden;
 	z-index: 1;
 }
 #boneList li {
@@ -74,10 +75,12 @@ button {
 }
 
 #keyframes {
+	padding-left: 4px;
 	background-image: url(../images/bg.png);
 }
 
 #scale {
+	white-space: nowrap;
 	position: absolute;
 	top: 0px;
 	left: 0px;
@@ -87,6 +90,7 @@ button {
 	border-bottom: solid 1px rgba(0,0,0,0.3);
 	opacity: 0.6;
 	z-index: 3;
+	overflow: hidden;
 }
 #scale span {
 	text-align: center;
@@ -107,25 +111,26 @@ button {
 
 div.keyframe-row {
 	position: relative;
-	margin: 2px 0 2px 3.5px;
+	margin: 0px 0 0px 0;
 	width: 100%;
-	height: 20px;
+	height: 21px;
+	max-height: 21px;
 	z-index: 2;
 }
 div.keyframe-row:first-child {
-	padding-top: 24px;
+	padding-top: 26px;
 }
 
 div.keyframe-row .line {
 	position: absolute;
-	top: 8px;
+	top: 9px;
 	left: 10px;
 	height: 3px;
 	background-color: #3A7DE7;
 	z-index: 2;
 }
 div.keyframe-row:first-child .line {
-	top: 24px;
+	margin-top: 3px;
 }
 
 .keyframe {
